setup/rancher-turtles-capc-rke2/gitops/00-namespace-credentials.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: capc-rke2-cluster-1
